--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
 :root {
-  --bg-colour: linear-gradient(
+  --bg-colour: linear-gradient(180deg,
     hsl(0, 100%, 100%), 
+    hsl(320, 100%, 75%),
     hsl(320, 100%, 50%),
-    rgb(127, 0, 255)
+    hsl(270, 100%, 50%)
   );
-  --speed: 2s;
-  --rotation: 360deg;
+  --speed: 5s;
+  --max-speed: 10s;
+  --offset-speed: calc(var(--max-speed) - var(--speed));
+  --rotation: 900deg;
   --origin-x: 50%;
   --origin-y: 50%;
+  --play-state: running;
   --width: 100px;
   --height: 100px;
 }
 
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #000;
+  color: #fff;
 }
 
 .main-container {
@@ -25,63 +32,58 @@ body {
   height: 100vh;
 }
 
-.controls-wrapper {
+h3 {
   position: absolute;
-  top: 20px;
-  left: calc(50vw - 20px);
-  /* height: 20vh; */
-  display: flex;
-  flex-direction: column;
+  top: 5vh;
+  /* left: calc(50vw - 20px); */
+  margin: 0 auto;
 }
 
-.controls-wrapper > input {
-  margin-bottom: 10px;
-}
+/**********/
+/* Shapes */
+/**********/
 
-.box-wrapper {
-  /* position: relative; */
+.shapes-wrapper {
   position: absolute;
-  /* height: 80vh; */
+  bottom: 30vh;
+  transform: translateX(-50px);
 }
 
-.box {
+.shape {
   position: absolute;
   width: var(--width);
   height: var(--height);
-  opacity: 0.75;
+  opacity: 0.85;
   border-radius: 0% 50% / 0% 50%;
+  background: var(--bg-colour);
   mix-blend-mode: screen;
   transform-origin: var(--origin-x) var(--origin-y);
-  animation: mymove var(--speed) cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+  animation: mymove var(--offset-speed) cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+  animation-delay: 0s;
+  animation-play-state: var(--play-state);
 }
 
-.box:nth-child(1) { 
-  transform: translate(-50%, -50%) rotate(180deg);
-  animation-delay: 0s;
-  background: var(--bg-colour);
+.shape:nth-child(1) { 
+  transform: translate(-50%, -50%) rotate(180deg) scale(1);
 }
 
-.box:nth-child(2) { 
-  transform: translate(50%, -50%) rotate(270deg);
-  animation-delay: 0s;
-  background: var(--bg-colour);
+.shape:nth-child(2) { 
+  transform: translate(50%, -50%) rotate(270deg) scale(1);
 }
 
-.box:nth-child(3) { 
-  transform: translate(-50%, 50%) rotate(90deg);
-  animation-delay: 0s;
-  background: var(--bg-colour);
+.shape:nth-child(3) { 
+  transform: translate(-50%, 50%) rotate(90deg) scale(1);
 }
 
-.box:nth-child(4) { 
-  transform: translate(50%, 50%) rotate(360deg);
-  animation-delay: 0s;
-  background: var(--bg-colour);
+.shape:nth-child(4) { 
+  transform: translate(50%, 50%) rotate(360deg) scale(1);
 }
 
 @keyframes mymove {
   50% {
     border-radius: 50%;
-    transform: translate(0%, 0%) rotate(var(--rotation));
+    opacity: 0.25;
+    transform: translate(0%, 0%) rotate(var(--rotation)) scale(0.25);
   }
 }
+
