--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,8 @@
 :root {
   --bg-colour: linear-gradient(180deg,
     hsl(0, 100%, 100%), 
-    hsl(320, 100%, 75%),
-    hsl(320, 100%, 50%),
-    hsl(270, 100%, 50%)
+    hsl(320, 100%, 65%),
+    hsl(270, 100%, 55%)
   );
   --speed: 5s;
   --max-speed: 10s;
@@ -36,6 +35,7 @@ h3 {
   position: absolute;
   top: 5vh;
   margin: 0 auto;
+  color: hsl(320, 100%, 75%);
 }
 
 /**********/
@@ -62,21 +62,10 @@ h3 {
   animation-play-state: var(--play-state);
 }
 
-.shape:nth-child(1) { 
-  transform: translate(-50%, -50%) rotate(180deg) scale(1);
-}
-
-.shape:nth-child(2) { 
-  transform: translate(50%, -50%) rotate(270deg) scale(1);
-}
-
-.shape:nth-child(3) { 
-  transform: translate(-50%, 50%) rotate(90deg) scale(1);
-}
-
-.shape:nth-child(4) { 
-  transform: translate(50%, 50%) rotate(360deg) scale(1);
-}
+.shape:nth-child(1) { transform: translate(-50%, -50%) rotate(180deg) scale(1); }
+.shape:nth-child(2) { transform: translate(50%, -50%) rotate(270deg) scale(1); }
+.shape:nth-child(3) { transform: translate(-50%, 50%) rotate(90deg) scale(1); }
+.shape:nth-child(4) { transform: translate(50%, 50%) rotate(360deg) scale(1); }
 
 @keyframes mymove {
   50% {
